--- a/index.html
+++ b/index.html
@@ -1,1 +1,114 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>India Taylor</title>
+    <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text x=%22-.1em%22 y=%22.9em%22 font-size=%2280%22>💻</text></svg>"> <!--favicon emoji-->
+    <!--Fonts-->
+    <link href="https://fonts.googleapis.com/css?family=Source+Code+Pro:400,900|Source+Sans+Pro:300,900&display=swap" rel="stylesheet">
+
+    <script src="https://kit.fontawesome.com/d0139f2037.js" crossorigin="anonymous"></script> <!--social logos-->
+
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <header>
+        <div class="logo">
+            <img src="img" alt="logo goes here">
+        </div>
+        <button class="nav-toggle" aria-label="toggle navigation">
+            <span class="hamburger"></span>
+        </button>
+        <nav class="nav">
+            <ul class="nav__list">
+                <li class="nav__item"><a href="#home" class="nav__link">Home</a></li>
+                <li class="nav__item"><a href="#services" class="nav__link">My Services</a></li>
+                <li class="nav__item"><a href="#about" class="nav__link">About Me</a></li>
+                <li class="nav__item"><a href="#work" class="nav__link">My Work</a></li>
+            </ul>
+        </nav>
+    </header>
+
+<!--Introduction-->
+<section class="intro" id="home">
+    <h1 class="section__title section__title--intro">Hi, I am <strong>India Taylor</strong></h1>
+    <p class="section__subtitle section__subtitle--intro">UoB Student</p>
+    <img src="assets/eduardo-dutra-k6b53YWZI9I-unsplash@2x.png" alt="avatar image of India Taylor" class="intro__img">
+</section>
+
+<!--My Services-->
+<section class="my-services" id="services">
+    <h2 class="section__title section__title--services">What I do</h2>
+    <div class="services"></div>
+       <div class="service">
+         <h3>HTML</h3>
+         <p>words go here words go here words go here words go here words go here words go here words go here words go here</p>
+       </div> <!--end of service-->
+
+       <div class="service">
+        <h3>CSS</h3>
+        <p>words go here words go here words go here words go here words go here words go here words go here words go here</p>
+      </div> <!--end of service-->
+
+      <div class="service">
+        <h3>JavaScript</h3>
+        <p>words go here words go here words go here words go here words go here words go here words go here words go here words go here words go here</p>
+      </div> <!--end of service-->
+    </div>
+
+    <a href="#work" class="btn">My Work</a>
+</section>
+
+<!--About Me-->
+<section class="about-me" id="about">
+    <h2 class="section__title section__title--about">Who I Am</h2>
+    <p class="section__subtitle section__subtitle--about">Birmingham based coding student</p>
+
+    <div class="about-me__body">
+        <p>I am a bootcamp coding student at the University of Birmingham. I have a background in events management, and decided to change course completley and get into coding. So far I have studied HTML, CSS and JavaScript. add more words here add more words here.</p>
+        <p>I am super excited to be starting my coding journey and can't wait to see where it leads - wish me luck ! add more words here add more words here add more words here add more words here</p>
+    </div>
+
+    <img src="assets/eduardo-dutra-Kqjc3vvgl1k-unsplash@2x.png" alt="leaning on a bus" class="about-me__image">
+</section>
+
+
+<!--My Work-->
+<section class="my-work" id="work">
+    <h2 class="section__title section__title--work">My Work</h2>
+    <p class="section__subtitle section__subtitle--work">Progress so far</p>
+
+    <div class="portfolio">
+<!--portfolio item 1-->
+        <a href="#" class="portfolio__item">
+            <img src="portfolio" alt="" class="portfolio__img">
+        </a>
+
+<!--portfolio item 2-->
+        <a href="#" class="portfolio__item">
+            <img src="portfolio" alt="" class="portfolio__img">
+        </a>
+
+<!--portfolio item 3-->
+        <a href="#" class="portfolio__item">
+            <img src="portfolio" alt="" class="portfolio__img">
+        </a>
+    </div>
+</section>
+
+<!--Footer-->
+<footer class="footer">
+    <a href="mailto:taylorindia92@gmail.com" class="footer-link">taylorindia92@gmail.com</a>
+    <ul>
+        <li class="social-list__item">
+            <a class=social-list__link href="https://github.com/indiataylor1">
+                <i class="fa-brands fa-github"></i>
+            </a>
+        </li>
+   </ul>
+</footer>
+</body>
+</html>
 
