--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
     <header>
         <div class="logo">
-            <img src="img" alt="logo goes here">
+            <img src="assets/logo3.png"alt="">
         </div>
         <button class="nav-toggle" aria-label="toggle navigation">
             <span class="hamburger"></span>
@@ -35,7 +35,7 @@
 <section class="intro" id="home">
     <h1 class="section__title section__title--intro">Hi, I am <strong>India Taylor</strong></h1>
     <p class="section__subtitle section__subtitle--intro">UoB Student</p>
-    <img src="assets/eduardo-dutra-k6b53YWZI9I-unsplash@2x.png" alt="avatar image of India Taylor" class="intro__img">
+    <img src="assets/india-resize.jpeg" alt="avatar image of India Taylor" class="intro__img">
 </section>
 
 <!--My Services-->
@@ -44,17 +44,17 @@
     <div class="services"></div>
        <div class="service">
          <h3>HTML</h3>
-         <p>words go here words go here words go here words go here words go here words go here words go here words go here</p>
+         <p>HTML stands for Hypertext Markup Language, and it is the most widely used language to write Web Pages. As its name suggests, HTML is a markup language. Hypertext refers to the way in which Web pages (HTML documents) are linked together. When you click a link in a Web page, you are using hypertext. Markup Language describes how HTML works.</p>
        </div> <!--end of service-->
 
        <div class="service">
         <h3>CSS</h3>
-        <p>words go here words go here words go here words go here words go here words go here words go here words go here</p>
+        <p>Cascading Style Sheets (CSS) is a style sheet language used for describing the presentation of a document written in a markup language such as HTML. CSS is a cornerstone technology of the World Wide Web, alongside HTML and JavaScript.CSS is designed to enable the separation of content and presentation, including layout, colors, and fonts.</p>
       </div> <!--end of service-->
 
       <div class="service">
         <h3>JavaScript</h3>
-        <p>words go here words go here words go here words go here words go here words go here words go here words go here words go here words go here</p>
+        <p>JavaScript is a programming language commonly used in web development. It was originally developed by Netscape as a means to add dynamic and interactive elements to websites. While JavaScript is influenced by Java, the syntax is more similar to C and is based on ECMAScript, a scripting language developed by Sun Microsystems.</p>
       </div> <!--end of service-->
     </div>
 
@@ -67,33 +67,33 @@
     <p class="section__subtitle section__subtitle--about">Birmingham based coding student</p>
 
     <div class="about-me__body">
-        <p>I am a bootcamp coding student at the University of Birmingham. I have a background in events management, and decided to change course completley and get into coding. So far I have studied HTML, CSS and JavaScript. add more words here add more words here.</p>
-        <p>I am super excited to be starting my coding journey and can't wait to see where it leads - wish me luck ! add more words here add more words here add more words here add more words here</p>
+        <p>I am a coding student at the University of Birmingham. I am currently enrolled in a bootcamp and will be a fully fledged coder in April 2023. I have so far covered; HTML, CSS and JavaScript.</p>
+        <p>I am super excited to be starting my coding journey and can't wait to see where it leads - wish me luck ! </p>
     </div>
 
-    <img src="assets/eduardo-dutra-Kqjc3vvgl1k-unsplash@2x.png" alt="leaning on a bus" class="about-me__image">
+    <img src="assets/india-resize.jpeg" alt="avatar image of India Taylor" class="about-me__image">
 </section>
 
 
 <!--My Work-->
 <section class="my-work" id="work">
     <h2 class="section__title section__title--work">My Work</h2>
-    <p class="section__subtitle section__subtitle--work">Progress so far</p>
+    <p class="section__subtitle section__subtitle--work">My projects so far</p>
 
     <div class="portfolio">
 <!--portfolio item 1-->
         <a href="#" class="portfolio__item">
-            <img src="portfolio" alt="" class="portfolio__img">
+            <img src="assets/Screenshot1.png" alt="" class="portfolio__img">
         </a>
 
 <!--portfolio item 2-->
         <a href="#" class="portfolio__item">
-            <img src="portfolio" alt="" class="portfolio__img">
+            <img src="assets/prework.png" alt="" class="portfolio__img">
         </a>
 
 <!--portfolio item 3-->
         <a href="#" class="portfolio__item">
-            <img src="portfolio" alt="" class="portfolio__img">
+            <img src="assets/currentwork.png" alt="" class="portfolio__img">
         </a>
     </div>
 </section>
@@ -109,6 +109,9 @@
         </li>
    </ul>
 </footer>
+
+<script src="java.js"></script>
+
 </body>
 </html>
 
