final updates to index and css

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         <p>I am super excited to be starting my coding journey and can't wait to see where it leads - wish me luck ! </p>
     </div>
 
-    <img src="assets/india-resize.jpeg" alt="avatar image of India Taylor" class="about-me__image">
+    <img src="assets/codingimage.jpg" alt="code on a computer screen" class="about-me__img">
 </section>
 
 
@@ -81,19 +81,14 @@
     <p class="section__subtitle section__subtitle--work">My projects so far</p>
 
     <div class="portfolio">
-<!--portfolio item 1-->
-        <a href="#" class="portfolio__item">
+<!--portfolio item 1 with link to deployed action-->
+        <a href="https://indiataylor1.github.io/challenge-one/" class="portfolio__item">
             <img src="assets/Screenshot1.png" alt="" class="portfolio__img">
         </a>
 
-<!--portfolio item 2-->
-        <a href="#" class="portfolio__item">
+<!--portfolio item 2 with link to deployed action-->
+        <a href="https://indiataylor1.github.io/Pre-Work-Study-Guide/" class="portfolio__item">
             <img src="assets/prework.png" alt="" class="portfolio__img">
-        </a>
-
-<!--portfolio item 3-->
-        <a href="#" class="portfolio__item">
-            <img src="assets/currentwork.png" alt="" class="portfolio__img">
         </a>
     </div>
 </section>
