--- a/index.html
+++ b/index.html
@@ -87,8 +87,8 @@
         </a>
 
 <!--portfolio item 2 with link to deployed action-->
-        <a href="https://indiataylor1.github.io/Pre-Work-Study-Guide/" class="portfolio__item">
-            <img src="assets/prework.png" alt="" class="portfolio__img">
+        <a href="" class="portfolio__item">
+            <img src="/assets/home-screenshot.png" alt="" class="portfolio__img">
         </a>
     </div>
 </section>
