updated portfolio work

--- a/index.html
+++ b/index.html
@@ -85,6 +85,10 @@
         <a href="https://indiataylor1.github.io/challenge-one/" class="portfolio__item">
             <img src="assets/Screenshot1.png" alt="" class="portfolio__img">
         </a>
+<!--portfolio item 3 with link to deployed action-->
+        <a href="https://github.com/indiataylor1/book-nook.git" class="portfolio__item">
+            <img src="/assets/book7.jpg" alt="" class="portfolio__img">
+        </a>
 
 <!--portfolio item 2 with link to deployed action-->
         <a href="" class="portfolio__item">
